# eyeread.in

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  LICENSE.md  LICENSING.md  PRIVACY.md  README.md  SECURITY.md  TERMS.md  TODO.md  eslint.config.js  index.html  latest.json  package-lock.json  package.json  playwright.app.config.js  playwright.config.js  vite.config.js
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  3-compat-report.yml  (+3 more)
design/: .thumbnail  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css  styles.less
design_system/: .thumbnail  SKILL.md  _ds_manifest.json  readme.md  styles.css
docs/: ARCHITECTURE.md  PLATFORM_SUPPORT.md  RELEASE_STRATEGY.md  RELEASING.md  TROUBLESHOOTING.md
scripts/: apply-compat-report.mjs  compare-app-screenshots.mjs  compare-screenshots.mjs  fetch-sponsors.mjs  gen-compat.mjs  gen-dmg-background.mjs  sync-glimpse-windows.mjs  sync-nightly-windows.mjs
site/: README.md  index.html  vite.config.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.nightly.plist  Info.plist  tauri.conf.json  tauri.glimpse.conf.json  tauri.nightly.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/iconcomposer/Assets.xcassets/AppIcon.appiconset/: Contents.json
src-tauri/icons/iconcomposer/actool-out/: AppIcon.icns  Assets.car
src-tauri/src/: lib.rs  main.rs
(+297 files in other folders)
